fixing links css to not change look of dropdown menu on small screens

--- a/docs/css/Links.css
+++ b/docs/css/Links.css
@@ -1,11 +1,11 @@
 #linklist{
 	height:100%;padding:0.5em;width:85%;max-width:450px;margin:auto;
 }
-ul{list-style:none;padding:0;}
-li{
+#linklist ul{list-style:none;padding:0;}
+#linklist li{
 	background-color:#FADFBB;color:#000;
 	padding:1em 0.7em;margin:1.5em 0;
 	border:2px solid #da810f;
 }
-a{text-decoration:none;text-align:center;}
-li:hover{background-color:#f9d6a9;}
+#linklist a{text-decoration:none;text-align:center;}
+#linklist li:hover{background-color:#f9d6a9;}
